<resources>
    <string name="app_name">Text</string>
    <string name="action_settings">Settings</string>
    <string name="expri_despri">项目描述</string>
    <string name="expri_soft_envir">软件环境</string>
    <string name="expri_function">功能描述</string>
    <string name="technology">技术要点</string>
    <string name="EnglishName">woody.wang</string>
    <string name="click_back">点击返回</string>
    <string name="project_name">项目名称</string>
</resources>
