<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/default_margin"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="@dimen/default_margin"
        android:text="@string/click_back"
        android:textColor="@color/base_color"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        android:text="@string/project_name"
        />

    <TextView
        android:id="@+id/ll_project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        android:text="@string/expri_soft_envir"/>

    <LinearLayout
        android:id="@+id/ll_soft_envir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        android:text="@string/expri_despri"/>

    <LinearLayout
        android:id="@+id/ll_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        android:text="@string/expri_function"
        android:textSize="@dimen/text_normal_size"
        />

    <LinearLayout
        android:id="@+id/ll_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        android:text="@string/technology"
        android:textSize="@dimen/text_normal_size"
        />

    <LinearLayout
        android:id="@+id/ll_tech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>